<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/bottomNavigationViewHeight"
    android:orientation="vertical"
    android:weightSum="8"
    tools:context=".activities.MainActivity"
    android:id="@+id/fragmentCamera">

    <RelativeLayout
        android:id="@+id/ImageContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7" >

        <TextureView
            android:id="@+id/textureView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/PhotoButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/totalSum"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="26dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="Sum total"
            android:gravity="center"/>

        <ImageButton
            android:id="@+id/photoButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:state_enabled="false"
            android:color="#9D9FA2"/>

    </LinearLayout>

</LinearLayout>
