...

            <Button
                android:id="@+id/saveButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:text="Save" />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:text="Delete" />

        </LinearLayout>
...
